fix: #27 추천 기록 중복 방지 로직 개선 (정규화/밀리초 비교)